--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background-color: rgb(184, 193, 241);
+  background-color: rgb(221, 206, 202);
 }
 
 img {
@@ -25,14 +25,12 @@ header {
 }
 
 header select {
+  border-radius: 5px;
+  color: green;
   width: 50vw;
   padding: 5px;
   margin-top: 5%;
   font-size: 1.5em;
-}
-
-main {
-  padding: 5%;
 }
 
 .card-main {
@@ -45,12 +43,14 @@ main {
 }
 
 .card-sprite {
+  padding: 15px;
   border-radius: 50%;
   border: 1px solid #cecece;
 }
 
 .card-text {
-  margin-top: 2%;
+  font-size: 1.5em;
+  margin-top: 5%;
   text-align: center;
 }
 
